--- a/.env.prod
+++ b/.env.prod
@@ -10,7 +10,7 @@ APSCHEDULER_CONFIG={"apscheduler.timezone": "Asia/Shanghai"}
 NICKNAME=["SeaBot"] 
 
 # 超级管理员的QQ号
-SUPERUSERS=[""] 
+SUPERUSERS=["1409100785"] 
 
 # 当前的唤醒方式为"SeaBot-命令 参数(可选)"
 COMMAND_START=["-"] 
